--- a/tex/Citations.tex
+++ b/tex/Citations.tex
@@ -23,7 +23,7 @@
 	
 	Ajoutez quelquefois, et souvent effacez. \medskip
 	
-	\textit{-- Nicolas Boileau}
+	\textit{\footnotesize -- Nicolas Boileau}
 	
 \end{flushright}
 
