--- a/tex/Introduction.tex
+++ b/tex/Introduction.tex
@@ -288,6 +288,8 @@ Ainsi, les systèmes électro-mécano-acoustiques comme les haut-parleurs ou les
 \paragraph{Résumé des analogies}
 
 \begin{table}[!ht]
+	\caption{Analogies électro-mécano-acoustiques}
+	\label{tab:AnalogElectroMecanoAcoust}
 	\centering
 	\begin{tabular}{| C{.25\textwidth} | C{.25\textwidth} | C{.25\textwidth} |}
 	\hline
@@ -297,7 +299,6 @@ Ainsi, les systèmes électro-mécano-acoustiques comme les haut-parleurs ou les
 	\hline
 	
 	\end{tabular}
-	\caption{Analogies électro-mécano-acoustiques}
 \end{table}
 
 \subsubsection{Circuit électrique équivalent à un noyau thermoacoustique}
