--- a/tex/ParamGaz.tex
+++ b/tex/ParamGaz.tex
@@ -4,11 +4,14 @@
 
 
 \begin{table}[!ht]
+	\caption{Résumé des paramètres thermodynamiques pour le mélange de gaz choisi.}
+	\label{tab:ParamGaz}
 	\centering
 	\begin{tabular}{l @{\hspace{.5cm}} >{$} l <{$} @{\hspace{1cm}} l}
 		\hline
 		\textbf{Quantité} & \textbf{Symbole} &\textbf{Valeur}\\
 		\hline\hline
+		Célérité du son & c_0 & \echaf?\\
 		Masse volumique & \rho & ?\\
 		Capacité calorifique & C_p &  ?\\
 		Indice adiabatique & \gamma & ?\\
@@ -17,6 +20,4 @@
 		Conductivité thermique & k & ?\\
 		\hline
 	\end{tabular}
-	\caption{Résumé des paramètres thermodynamiques pour le mélange de gaz choisi.}
-	\label{tab:ParamGaz}
 \end{table}
