--- a/tex/IndexNotations.tex
+++ b/tex/IndexNotations.tex
@@ -4,7 +4,13 @@
     \begin{longtable}{p{.15\textwidth} p{.75\textwidth}}
 %    	\hline
         \multicolumn{2}{c}{Lettres latines}  \\\hline
-        \textbf{Symbole} & \textbf{Définition} \\\hline\hline
+        \textbf{Symbole} & \textbf{Définition} \\\hline\hline \endfirsthead
+        \multicolumn{2}{c}{Lettres latines (suite)}  \\\hline
+        \textbf{Symbole} & \textbf{Définition} \\\hline\hline \endhead
+		
+		\hline
+		\multicolumn{2}{r}{Continué sur la page suivante...} \endfoot
+        \hline \endlastfoot
         $\mathbf{g}$ & Constante de gravité, $\mathbf{g}=\qty{9.81}{\meter\per\second\squared}$ \\
         $g$ & Gain thermoacoustique \\
         $\Grashof$ & Nombre de Grashof \\
@@ -26,12 +32,12 @@
         $\Rayleigh$ & Nombre de Rayleigh \\
         $r_h$ & Rayon hydraulique des pores du régénérateur \\
         $T_0$ & Température moyenne locale du gaz dans le noyau \\
-        $T_\infty$ & Température ambiante hors \textcolor{red}{du noyau / de la machine} \\
+        $T_\infty$ & Température ambiante hors de la machine \\
         $u$ & Débit acoustique \\
         $v$ & Vitesse acoustique \\
         $\mathbf{e}_x$ & Coordonnée axiale dans le noyau \\
         $Q_c$ & Flux de chaleur extrait par l'eau circulant dans l'échangeur ambiant \\
-        $Q_f$ & Flux de chaleur apporté par les résistances chauffantes dans l'échangeur froid\\\hline
+        $Q_f$ & Flux de chaleur apporté par les résistances chauffantes dans l'échangeur froid\\
     \end{longtable}
 
 \bigskip
