--- a/tex/RecapCondExpe.tex
+++ b/tex/RecapCondExpe.tex
@@ -2,37 +2,66 @@
 \section{\'Etude sur la convection naturelle}
 Les conditions expérimentales du chapitre~\ref{chap:EtudeExpe_ConvNat} sont résumées de façon détaillée dans le tableau~\ref{tab:RecapCondExpe}.
 
-\begin{table}[!ht]
-\centering
-	\begin{tabular}{ llll llll llll lc}
+\begin{longtable}{llll llll llll ll}
+	\caption{Tableau récapitulatif des conditions expérimentales.}
+	\label{tab:RecapCondExpe}\\%
+	
 	\hline
 	$\xi_1$ & $\xi_2$  & $DR$ & $p$ & $|Z_{ac}^{(1)}|$ & $|Z_{ac}^{(2)}|$& $\angle Z_{ac}^{(1)}$  & $\angle Z_{ac}^{(2)}$ & $T_a$  & $T_c$ & $\dot Q_a$ & $\dot Q_c$  & \multirow{2}{*}{Orientation} \\%
 	
-	\multicolumn{2}{c}{[\unit{\milli\meter}]} & [\unit{\percent}] & [\unit{\pascal}] & \multicolumn{2}{c}{[\unit{\pascal\second\per\meter}]} & \multicolumn{2}{c}{[\unit{\degree}]}  & \multicolumn{2}{c}{[\unit{\degreeCelsius}]} &\multicolumn{2}{c}{[\unit{\watt}]} &  \\\hline\hline
+	\multicolumn{2}{c}{[\unit{\milli\meter}]} & [\unit{\percent}] & [\unit{\pascal}] & \multicolumn{2}{c}{[\unit{\pascal\second\per\meter}]} & \multicolumn{2}{c}{[\unit{\degree}]}  & \multicolumn{2}{c}{[\unit{\degreeCelsius}]} &\multicolumn{2}{c}{[\unit{\watt}]} &  \\\hline\hline \endfirsthead
 	
-	0 & 0  &  \num{0} & 0 & -- & -- & -- & -- & \echaf{?} & \echaf{?} & \echaf{?} & 40 & \multirow{4}{*}{`\texttt{H1}'} \\
-	\echaf{?} & \echaf{?} &  \num{.4} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & 0 &  \\
-	\echaf{?} & \echaf{?} &  \num{2} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & 0 & \\
+	\hline
+	$\xi_1$ & $\xi_2$  & $DR$ & $p$ & $|Z_{ac}^{(1)}|$ & $|Z_{ac}^{(2)}|$& $\angle Z_{ac}^{(1)}$  & $\angle Z_{ac}^{(2)}$ & $T_a$  & $T_c$ & $\dot Q_a$ & $\dot Q_c$  & \multirow{2}{*}{Orientation} \\%
+	
+	\multicolumn{2}{c}{[\unit{\milli\meter}]} & [\unit{\percent}] & [\unit{\pascal}] & \multicolumn{2}{c}{[\unit{\pascal\second\per\meter}]} & \multicolumn{2}{c}{[\unit{\degree}]}  & \multicolumn{2}{c}{[\unit{\degreeCelsius}]} &\multicolumn{2}{c}{[\unit{\watt}]} &  \\\hline\hline \endhead
+	
+	\hline
+	\multicolumn{13}{r}{Continué sur la page suivante...} \endfoot
+    \hline \endlastfoot
+	
+	0 & 0  &  \num{0} & 0 & -- & -- & -- & -- & \echaf{?} & \echaf{?} & \echaf{?} & 40 & \multirow{4}{*}{`\texttt{H1}'} \\*
+	\echaf{?} & \echaf{?} &  \num{.4} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & 0 &  \\*
+	\echaf{?} & \echaf{?} &  \num{2} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & 0 & \\*
 	\echaf{?} & \echaf{?} &  \num{3.4} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & 0 &  \\
 	 \hdashline
-	0 & 0 &  \num{0} & 0 & -- & -- & -- & -- &  &  &  & 40 & \multirow{4}{*}{`\texttt{H2}'} \\
-	 &  &  \num{.4} & & & &&& & \num{} & & 0 & \\
-	 &  &  \num{2} & & &&& & & \num{} & & 0 & \\
+	0 & 0 &  \num{0} & 0 & -- & -- & -- & -- &  &  &  & 40 & \multirow{4}{*}{`\texttt{H2}'} \\*
+	 &  &  \num{.4} & & & &&& & \num{} & & 0 & \\*
+	 &  &  \num{2} & & &&& & & \num{} & & 0 & \\*
 	 &  &  \num{3.4} & & & &&& & \num{} & & 0 & \\
 	 \hdashline
-	0 & 0 &  \num{0} & 0 & -- & -- & -- & -- &  &  &  & 40 & \multirow{4}{*}{`\texttt{V1}'} \\
-	 &  &  \num{.4} & & & & &&& \num{} & & 0 & \\
-	 &  &  \num{2} &  & & &&& & \num{} & & 0 & \\
-	 &  &  \num{3.5} &  & & &&& & \num{} & & 0 & \\
-	 \hdashline
-	0 & 0 &  \num{0} & 0 & -- & -- & -- & -- &  &  &  & 40 & \multirow{4}{*}{`\texttt{V2}'} \\
-	 &  &  \num{.4} & & && & && \num{} & & 0 & \\
-	 &  &  \num{2} & & & &&& & \num{} & & 0 & \\
-	 &  &  \num{3.5} &  & & & & \num{} & & & & 0 & \\
-	 \hline
+	0 & 0 &  \num{0} & 0 & -- & -- & -- & -- &  &  &  & 40 & \multirow{8}{*}{`\texttt{V1}'} \\*
+	 &  &  \num{.4} & & & & &&& \num{} & & 0 & \\*
+	 &  &  \num{2} &  & & &&& & \num{} & & 0 & \\*
+	 &  &  \num{2} &  & & &&& & \num{} & & 50 & \\*
+	 &  &  \num{2} &  & & &&& & \num{} & & 100 & \\*
+	 &  &  \num{3.5} &  & & &&& & \num{} & & 0 & \\*
+	 &  &  \num{3.5} &  & & &&& & \num{} & & 50 & \\*
+	 &  &  \num{3.5} &  & & &&& & \num{} & & 100 & \\
+	 \hdashline 
+	0 & 0 &  \num{0} & 0 & -- & -- & -- & -- &  &  &  & 40 & \multirow{8}{*}{`\texttt{V2}'} \\*
+	 &  &  \num{.4} & & && & && \num{} & & 0 & \\*
+	 &  &  \num{2} & & & &&& & \num{} & & 0 & \\*
+	 &  &  \num{2} & & & &&& & \num{} & & 50 & \\*
+	 &  &  \num{2} & & & &&& & \num{} & & 100 & \\*
+	 &  &  \num{3.5} &  & & & & \num{} & & & & 0 & \\*
+	 &  &  \num{3.5} &  & & & & \num{} & & & & 50 & \\*
+	 &  &  \num{3.5} &  & & & & \num{} & & & & 100 & \\*
+\end{longtable}
 	
-	\end{tabular}
-	\caption{Tableau récapitulatif des conditions expérimentales.}
-	\label{tab:RecapCondExpe}
-\end{table}
 
+\begin{table}[!ht]
+	\caption{Récapitulatif des nombres adimensionnés.}
+	\label{tab:RecapNbrAdim}
+	\centering
+	\begin{tabular}{>{$}l<{$} llll @{\hspace{25pt}} llll @{\hspace{25pt}} llll @{\hspace{25pt}} llll}\hline
+	\multirow{2}{*}{\textbf{Nombre}} & \multicolumn{4}{c}{`\texttt{H1}'} & \multicolumn{4}{c}{`\texttt{H2}'} & \multicolumn{4}{c}{`\texttt{V1}'} & \multicolumn{4}{c}{`\texttt{V2}'}\\
+	 & \num{0} & \num{.4} & \num{2} & \num{3.5} & \num{0} & \num{.4} & \num{2} & \num{3.5} & \num{0} & \num{.4} & \num{2} & \num{3.5} & \num{0} & \num{.4} & \num{2} & \num{3.5} \\ \hline\hline
+	\Rayleigh &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\
+	\Peclet &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\
+	\Prandtl &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\
+	\Grashof &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\
+	\Nusselt &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ \hline
+	\end{tabular}
+
+\end{table}
