Ajouter partie perf et conv nat

--- a/tex/DispositifExpe.tex
+++ b/tex/DispositifExpe.tex
@@ -255,6 +255,8 @@ Une acquisition étiquetée `\texttt{Acou}' est démarrée, puis les sources son
 
 Au cours de cette étude, trois amplitudes acoustiques sont choisies. La première correspond à un \textit{drive ratio} $DR=\frac{p}{P_0}=\qty{.4}{\percent}$, soit une amplitude très faible où l'effet thermoacoustique est à peine visible. Ainsi, l'hypothèse concernant la linéarité acoustique est mieux vérifiée et peut \textit{a priori} être plus aisément comparé à la théorie linéaire. À l'inverse, le \textit{drive ratio} de la deuxième amplitude est le plus élevé avec $DR=\qty{3.5}{\percent}$, et est celui pour lequel les performances du réfrigérateur ($COP$, $Q_f$, ...) sont les plus élevées obtenues avec cette machine \cite{ramadan_design_2021}, mais aussi qui présentent de forts écarts à la théorie. La troisième est choisie à un \textit{drive ratio} intermédiaire où $DR=\qty{2}{\percent}$. 
 
+Ensuite, une charge thermique peut être appliquée au noyau, \echaf{à continuer...}
+
 
 
 \begin{comment}
@@ -544,7 +546,7 @@ Le report des flux de chaleurs des équations~\eqref{eq:FluxTA_Lotton_Regen} à 
 	\label{eq:ProbTransitoire_ApDvpt}
 \end{equation}
 
-La résolution de l'équation~\eqref{eq:BilanChaleur_LottonPoignand_ApDvptCylin} qui comporte des termes sources requiert l'usage de la méthode des transformations intégrales après réécriture des équations du système sous la forme d'un problème homogène équivalent \cite{ozisik_integraltransform_heat_1993}. Les équations s'écrivent alors
+La résolution de l'équation~\eqref{eq:BilanChaleur_LottonPoignand_ApDvptCylin} qui comporte des termes sources requiert l'usage de la méthode des transformations intégrales après réécriture des équations du système sous la forme d'un problème homogène équivalent \cite{ozisik_heat_1993}. Les équations s'écrivent alors
 
 \begin{subequations}
 	\begin{align}
