--- a/tex/IndexNotations.tex
+++ b/tex/IndexNotations.tex
@@ -11,16 +11,18 @@
 		\hline
 		\multicolumn{2}{r}{Continué sur la page suivante...} \endfoot
         \hline \endlastfoot
+        $c_0$ & Célérité du son dans le milieu \\
+        $C_p$ & Capacité calorifique du gaz à pression constante \\
+        $C_s$ & Capacité calorifique du solide poreux \\
+        $C_v$ & Capacité calorifique du gaz à volume constant \\
+        $\COP$ & Coefficient de performance, $\COP=\frac{Q_f}{W_e}$ \\
+        $\COP_{\sf carnot}$ & Coefficient de performance de Carnot, $\COP_{\sf carnot} = \frac{T_f}{T_c-T_f}$ \\
         $\mathbf{g}$ & Constante de gravité, $\mathbf{g}=\qty{9.81}{\meter\per\second\squared}$ \\
         $g$ & Gain thermoacoustique \\
         $\Grashof$ & Nombre de Grashof \\
         $k_0$ & Nombre d'onde sans perte \\
-        $c$ & Célérité du son dans le milieu \\
         $k$ & Conductivité thermique \\
         $K_p$ & Perméabilité hydraulique d'un matériau poreux \\
-        $C_p$ & Capacité calorifique du gaz à pression constante \\
-        $C_s$ & Capacité calorifique du solide poreux \\
-        $C_v$ & Capacité calorifique du gaz à volume constant \\
         $L_{\sf reg}$ & Longueur du régénérateur, $L_{\sf reg}=\qty{39}{\milli\meter}$ \\
         $\Nusselt$ & Nombre de Nusselt \\
         $p_0$ & Pression statique dans le réfrigérateur \\
@@ -35,6 +37,7 @@
         $T_\infty$ & Température ambiante hors de la machine \\
         $u$ & Débit acoustique \\
         $v$ & Vitesse acoustique \\
+        $W_e$ & Puissance électrique consommée par les sources acoustiques \\
         $\mathbf{e}_x$ & Coordonnée axiale dans le noyau \\
         $Q_c$ & Flux de chaleur extrait par l'eau circulant dans l'échangeur ambiant \\
         $Q_f$ & Flux de chaleur apporté par les résistances chauffantes dans l'échangeur froid\\
@@ -67,8 +70,14 @@
 
     \begin{longtable}{p{.15\textwidth} p{.75\textwidth}}
 %		\hline
-		\multicolumn{2}{c}{Indices et exposants}  \\\hline
-		\textbf{Symbole} & \textbf{Définition} \\\hline\hline
+        \multicolumn{2}{c}{Indices et exposants}  \\\hline
+        \textbf{Symbole} & \textbf{Définition} \\\hline\hline \endfirsthead
+        \multicolumn{2}{c}{Indices et exposants (suite)}  \\\hline
+        \textbf{Symbole} & \textbf{Définition} \\\hline\hline \endhead
+		
+		\hline
+		\multicolumn{2}{r}{Continué sur la page suivante...} \endfoot
+        \hline \endlastfoot
 		$\square_c$ & Caractéristique critique\\
 		$\square^{\perp \mathbf g}$ & Perpendiculaire à la gravité $\mathbf g$ \\
 		$\square^{//~\mathbf g}$ & Parallèle à la gravité $\mathbf g$ \\
