--- a/tex/RecapCondExpe.tex
+++ b/tex/RecapCondExpe.tex
@@ -3,7 +3,7 @@
 Les conditions expérimentales du chapitre~\ref{chap:EtudeExpe_ConvNat} sont résumées de façon détaillée dans le tableau~\ref{tab:RecapCondExpe}.
 
 \begin{longtable}{llll llll llll ll}
-	\caption{Tableau récapitulatif des conditions expérimentales.}
+	\caption{Récapitulatif des conditions expérimentales.}
 	\label{tab:RecapCondExpe}\\%
 	
 	\hline
