--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -21,6 +21,7 @@
 \newcommand{\Reynolds}{\mathrm{Re}}
 \newcommand{\Grashof}{\mathrm{Gr}}
 \newcommand{\Peclet}{\mathrm{Pe}}
+\newcommand{\COP}{\mathrm{COP}}
 
 \newcommand{\RE}{\mathfrak{Re}}
 \newcommand{\IM}{\mathfrak{Im}}
