--- a/tex/RecapCondExpe.tex
+++ b/tex/RecapCondExpe.tex
@@ -2,51 +2,55 @@
 \section{\'Etude sur la convection naturelle}
 Les conditions expérimentales du chapitre~\ref{chap:EtudeExpe_ConvNat} sont résumées de façon détaillée dans le tableau~\ref{tab:RecapCondExpe}.
 
-\begin{longtable}{llll llll llll ll}
+\begin{longtable}{llll llll llll lll}
 	\caption{Récapitulatif des conditions expérimentales.}
 	\label{tab:RecapCondExpe}\\%
 	
 	\hline
-	$\xi_1$ & $\xi_2$  & $DR$ & $p$ & $|Z_{ac}^{(1)}|$ & $|Z_{ac}^{(2)}|$& $\angle Z_{ac}^{(1)}$  & $\angle Z_{ac}^{(2)}$ & $T_a$  & $T_c$ & $\dot Q_a$ & $\dot Q_c$  & \multirow{2}{*}{Orientation} \\%
+	$\xi_1$ & $\xi_2$  & $DR$ & $p$ & $|Z_{ac}^{(1)}|$ & $|Z_{ac}^{(2)}|$& $\angle Z_{ac}^{(1)}$  & $\angle Z_{ac}^{(2)}$ & $T_a$  & $T_f$ & $\dot Q_a$ & $\dot Q_c$ & $\COP$ & \multirow{2}{*}{Orientation} \\%
 	
-	\multicolumn{2}{c}{[\unit{\milli\meter}]} & [\unit{\percent}] & [\unit{\pascal}] & \multicolumn{2}{c}{[\unit{\pascal\second\per\meter}]} & \multicolumn{2}{c}{[\unit{\degree}]}  & \multicolumn{2}{c}{[\unit{\degreeCelsius}]} &\multicolumn{2}{c}{[\unit{\watt}]} &  \\\hline\hline \endfirsthead
+	\multicolumn{2}{c}{[\unit{\milli\meter}]} & [\unit{\percent}] & [\unit{\pascal}] & \multicolumn{2}{c}{[\unit{\pascal\second\per\meter}]} & \multicolumn{2}{c}{[\unit{\degree}]}  & \multicolumn{2}{c}{[\unit{\kelvin}]} &\multicolumn{2}{c}{[\unit{\watt}]} & [\unit{\percent}] & \\\hline\hline \endfirsthead
+	
+	\multicolumn{15}{l}{...suite du tableau \ref{tab:RecapCondExpe}}\\\hline
+	$\xi_1$ & $\xi_2$  & $DR$ & $p$ & $|Z_{ac}^{(1)}|$ & $|Z_{ac}^{(2)}|$& $\angle Z_{ac}^{(1)}$  & $\angle Z_{ac}^{(2)}$ & $T_a$  & $T_f$ & $\dot Q_a$ & $\dot Q_c$ & $\COP$ & \multirow{2}{*}{Orientation} \\%
+	
+	\multicolumn{2}{c}{[\unit{\milli\meter}]} & [\unit{\percent}] & [\unit{\pascal}] & \multicolumn{2}{c}{[\unit{\pascal\second\per\meter}]} & \multicolumn{2}{c}{[\unit{\degree}]}  & \multicolumn{2}{c}{[\unit{\kelvin}]} &\multicolumn{2}{c}{[\unit{\watt}]} & [\unit{\percent}] & \\\hline\hline \endhead
 	
 	\hline
-	$\xi_1$ & $\xi_2$  & $DR$ & $p$ & $|Z_{ac}^{(1)}|$ & $|Z_{ac}^{(2)}|$& $\angle Z_{ac}^{(1)}$  & $\angle Z_{ac}^{(2)}$ & $T_a$  & $T_c$ & $\dot Q_a$ & $\dot Q_c$  & \multirow{2}{*}{Orientation} \\%
-	
-	\multicolumn{2}{c}{[\unit{\milli\meter}]} & [\unit{\percent}] & [\unit{\pascal}] & \multicolumn{2}{c}{[\unit{\pascal\second\per\meter}]} & \multicolumn{2}{c}{[\unit{\degree}]}  & \multicolumn{2}{c}{[\unit{\degreeCelsius}]} &\multicolumn{2}{c}{[\unit{\watt}]} &  \\\hline\hline \endhead
-	
-	\hline
-	\multicolumn{13}{r}{Continué sur la page suivante...} \endfoot
+	\multicolumn{15}{r}{Continué sur la page suivante...} \endfoot
     \hline \endlastfoot
 	
-	0 & 0  &  \num{0} & 0 & -- & -- & -- & -- & \echaf{?} & \echaf{?} & \echaf{?} & 40 & \multirow{4}{*}{`\texttt{H1}'} \\*
-	\echaf{?} & \echaf{?} &  \num{.4} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & 0 &  \\*
-	\echaf{?} & \echaf{?} &  \num{2} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & 0 & \\*
-	\echaf{?} & \echaf{?} &  \num{3.4} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & \echaf{?} & 0 &  \\
+	\num{0} & \num{0}  &  \num{0} & \num{0} & --- & --- & --- & --- & \num{296} & \num{303} & \num{10} & \num{40} & --- & \multirow{8}{*}{`\texttt{H1}'} \\*
+	\num{1} & \num{.3} &  \num{.4} & \num{1.6e4} & \num{5.5e4} & \num{2.5e5} & \num{92} & \num{-152} & \num{292} & \num{287} & \num{.7} & 0 & 0 &  \\*
+	\num{5} & \num{1.1} &  \num{2} & \num{8.1e4} & \num{5.5e4} & \num{2.7e5} & \num{94} & \num{-157} & \num{294} & \num{264} & \num{72} & \num{0} & \num{0} & \\*
+	\num{} & \num{} &  \num{2} & \num{} & \num{} & \num{} & \num{} & \num{} & \num{} & \num{} & \num{} & \num{50} & \num{} & \\*
+	\num{} & \num{} &  \num{2} & \num{} & \num{} & \num{} & \num{} & \num{} & \num{} & \num{} & \num{} & \num{100} & \num{} & \\*
+	\num{8.5} & \num{1.8} &  \num{3.4} & \num{1.4e5} & \num{5.6e4} & \num{3e5} & \num{94} & \num{-156} & \num{296} & \num{256} & \num{194} & \num{0} & \num{0} & \\*
+	\num{} & \num{} &  \num{3.5} & \num{} & \num{} & \num{} & \num{} & \num{} & \num{} & \num{} & \num{} & \num{50} & \num{} & \\*
+	\num{} & \num{} &  \num{3.5} & \num{} & \num{} & \num{} & \num{} & \num{} & \num{} & \num{} & \num{} & \num{100} & \num{} & \\
 	 \hdashline
-	0 & 0 &  \num{0} & 0 & -- & -- & -- & -- &  &  &  & 40 & \multirow{4}{*}{`\texttt{H2}'} \\*
-	 &  &  \num{.4} & & & &&& & \num{} & & 0 & \\*
-	 &  &  \num{2} & & &&& & & \num{} & & 0 & \\*
-	 &  &  \num{3.4} & & & &&& & \num{} & & 0 & \\
+	\num{0} & \num{0} &  \num{0} & \num{0} & --- & --- & --- & --- & \num{293} & \num{304} & \num{12} & 40 & --- & \multirow{4}{*}{`\texttt{H2}'} \\*
+	\num{1} & \num{.4} & \num{.4} & \num{1.5e4} & \num{5.4e4} & \num{2.3e5} & \num{93} & \num{-151} & \num{291} & \num{287} & \echaf{\num{-.9}} & \num{0} & \num{0} & \\*
+	\num{5} & \num{1.2} & \num{2} & \num{8.1e4} & \num{5.5e4} & \num{2.7e5} & \num{94} & \num{-154} & \num{293} & \num{263} & \num{74} & \num{0} & \num{0} & \\*
+	\num{8.5} & \num{1.7} & \num{3.4} & \num{1.4e5} & \num{5.5e4} & \num{3e5} & \num{94} & \num{-156} & \num{299} & \num{257} & \num{158} & \num{0} & \num{0} & \\
 	 \hdashline
-	0 & 0 &  \num{0} & 0 & -- & -- & -- & -- &  &  &  & 40 & \multirow{8}{*}{`\texttt{V1}'} \\*
-	 &  &  \num{.4} & & & & &&& \num{} & & 0 & \\*
-	 &  &  \num{2} &  & & &&& & \num{} & & 0 & \\*
-	 &  &  \num{2} &  & & &&& & \num{} & & 50 & \\*
-	 &  &  \num{2} &  & & &&& & \num{} & & 100 & \\*
-	 &  &  \num{3.5} &  & & &&& & \num{} & & 0 & \\*
-	 &  &  \num{3.5} &  & & &&& & \num{} & & 50 & \\*
-	 &  &  \num{3.5} &  & & &&& & \num{} & & 100 & \\
+	\num{0} & \num{0} & \num{0} & \num{0} & --- & --- & --- & --- & \num{296} & \num{335} & \num{11} & \num{40} & --- & \multirow{8}{*}{`\texttt{V1}'} \\*
+	\num{1} & \num{.4} & \num{.4} & \num{1.6e4} & \num{5.6e4} & \num{2.3e5} & \num{93} & \num{-142} & \num{294} & \num{290} & \num{2} & \num{0} & \num{0} & \\*
+	\num{5} & \num{1.1} & \num{2} & \num{8.2e4} & \num{5.7e4} & \num{2.8e5} & \num{94} & \num{-154} & \num{299} & \num{270} & \num{53} & \num{0} & \num{0} & \\*
+	\num{5} & \num{1.1} & \num{2} & \num{8.2e4} & \num{5.6e4} & \num{2.7e5} & \num{94} & \num{-156} & \num{298} & \num{280} & \num{86} & \num{50} & \num{1.1} & \\*
+	\num{5} & \num{1.1} & \num{2} & \num{8.1e4} & \num{5.6e4} &  \num{2.7e5} & \num{93} & \num{-156} & \num{302} & \num{292} & \num{105} & \num{100} & \num{1.8} & \\*
+	\num{8.4} & \num{1.6} & \num{3.5} & \num{1.4e5} & \num{5.8e4} & \num{3.3e5} & \num{94} & \num{-153} & \num{311} & \num{267} & \num{167} & \num{0} & \num{0} & \\*
+	\num{8.3} & \num{1.7} & \num{3.4} & \num{1.4e5} & \num{5.7e4} & \num{3.1e5} & \num{94} & \num{-160} & \num{310} & \num{270} & \num{192} & \num{50} & \num{1.2} & \\*
+	\num{8.3} & \num{1.7} & \num{3.4} & \num{1.4e5} & \num{5.7e4} & \num{3.1e5} & \num{94} & \num{-160} & \num{310} & \num{275} & \num{218} & \num{100} & \num{2} & \\
 	 \hdashline 
 	0 & 0 &  \num{0} & 0 & -- & -- & -- & -- &  &  &  & 40 & \multirow{8}{*}{`\texttt{V2}'} \\*
-	 &  &  \num{.4} & & && & && \num{} & & 0 & \\*
-	 &  &  \num{2} & & & &&& & \num{} & & 0 & \\*
-	 &  &  \num{2} & & & &&& & \num{} & & 50 & \\*
-	 &  &  \num{2} & & & &&& & \num{} & & 100 & \\*
-	 &  &  \num{3.5} &  & & & & \num{} & & & & 0 & \\*
-	 &  &  \num{3.5} &  & & & & \num{} & & & & 50 & \\*
-	 &  &  \num{3.5} &  & & & & \num{} & & & & 100 & \\*
+	 &  &  \num{.4} & & && & && \num{} & & 0 & -- & \\*
+	 &  &  \num{2} & & & &&& & \num{} & & 0 & 0 & \\*
+	 &  &  \num{2} & & & &&& & \num{} & & 50 &  & \\*
+	 &  &  \num{2} & & & &&& & \num{} & & 100 &  & \\*
+	 &  &  \num{3.5} &  & & & & \num{} & & & & 0 & 0 & \\*
+	 &  &  \num{3.5} &  & & & & \num{} & & & & 50 &  & \\*
+	 &  &  \num{3.5} &  & & & & \num{} & & & & 100 &  & \\*
 \end{longtable}
 	
 
